--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/datepicker/multiple-selection/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/datepicker/multiple-selection/datePicker.xhtml
@@ -1,47 +1,39 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example#1: Hold down shift or control to select multiple dates -->
+		<!-- Example 1: Hold down shift or control to select multiple dates -->
 		<h:form>
-			<aui-nongen:field label="#{i18n['example-1']}">
-				<h:outputText value="#{i18n['aui-datepicker-multiple-selection-example-1']}" />
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['component']}">
+			<showcase:example description="#{i18n['aui-datepicker-multiple-selection-example-1']}" number="1">
 				<h:inputTextarea id="multiple" value="#{datePickerModelBean.multiple}" />
 				<aui:datePicker for="multiple" dateSeparator=" | " selectionMode="multiple" />
-			</aui-nongen:field>
-			<h:commandButton value="#{i18n['submit']}">
-				<f:ajax execute="@form" render="@form" />
-			</h:commandButton>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{datePickerModelBean.multiple}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+				<hr />
+				<h:commandButton value="#{i18n['submit']}">
+					<f:ajax execute="@form" render="@form" />
+				</h:commandButton>
+			</showcase:example>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{datePickerModelBean.multiple}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example#2: Pop up the datePicker multiple times to select multiple dates -->
+		<!-- Example 2: Pop up the datePicker multiple times to select multiple dates -->
 		<h:form>
-			<aui-nongen:field label="#{i18n['example-2']}">
-				<h:outputText value="#{i18n['aui-datepicker-multiple-selection-example-2']}" />
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['component']}">
+			<showcase:example description="#{i18n['aui-datepicker-multiple-selection-example-2']}" number="2">
 				<h:inputTextarea id="multipleSticky" value="#{datePickerModelBean.multiple}" />
 				<aui:datePicker for="multipleSticky" selectionMode="multiple-sticky" />
-			</aui-nongen:field>
-			<h:commandButton value="#{i18n['submit']}">
-				<f:ajax execute="@form" render="@form" />
-			</h:commandButton>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{datePickerModelBean.multiple}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+				<hr />
+				<h:commandButton value="#{i18n['submit']}">
+					<f:ajax execute="@form" render="@form" />
+				</h:commandButton>
+			</showcase:example>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{datePickerModelBean.multiple}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
