--- a/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/general/inputFile.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/general/inputFile.xhtml
@@ -1,43 +1,41 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui-nongen="http://liferay.com/faces/aui-nongen"
-	xmlns:bridge="http://liferay.com/faces/bridge" xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:portlet="http://java.sun.com/portlet_2_0" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-1col.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:bridge="http://liferay.com/faces/bridge"
+	xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<h:form enctype="multipart/form-data">
-			<aui-nongen:field label="#{i18n['component']}">
+			<showcase:example>
 				<bridge:inputFile fileUploadListener="#{inputFileBackingBean.handleFileUpload}" multiple="multiple" />
-			</aui-nongen:field>
-			<h:commandButton value="#{i18n['submit']}" />
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<c:set value="#{inputFileModelBean.uploadedFiles.size()}" var="totalFiles" />
-				<showcase:outputModel>
-					<h:dataTable rendered="#{totalFiles > 0}" styleClass="files" value="#{inputFileModelBean.uploadedFiles}"
-						var="uploadedFile">
-						<h:column>
-							<h:commandButton actionListener="#{inputFileBackingBean.deleteUploadedFile}"
-								image="#{resource['images:icon-delete.png']}"
-								onclick="if (! confirm('#{i18n['are-you-sure-you-want-to-delete-this']}')) {return false;}"
-								value="#{uploadedFile.id}">
-								<f:ajax render="@form" />
-							</h:commandButton>
-						</h:column>
-						<h:column>
-							<f:facet name="header">
-								<h:outputText rendered="#{totalFiles > 0}" value="#{i18n['file-name']}" />
-							</f:facet>
-							<h:outputText value="#{uploadedFile.name}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">
-								<h:outputText rendered="#{totalFiles > 0}" value="#{i18n['size']}" />
-							</f:facet>
-							<h:outputText value="#{uploadedFile.size}" />
-						</h:column>
-					</h:dataTable>
-				</showcase:outputModel>
-			</aui-nongen:field>
+				<hr />
+				<h:commandButton value="#{i18n['submit']}" />
+			</showcase:example>
+			<c:set value="#{inputFileModelBean.uploadedFiles.size()}" var="totalFiles" />
+			<showcase:outputModel>
+				<h:dataTable id="modelValue" rendered="#{totalFiles > 0}" styleClass="files" value="#{inputFileModelBean.uploadedFiles}"
+					var="uploadedFile">
+					<h:column>
+						<h:commandButton actionListener="#{inputFileBackingBean.deleteUploadedFile}"
+							image="#{resource['images:icon-delete.png']}"
+							onclick="if (! confirm('#{i18n['are-you-sure-you-want-to-delete-this']}')) {return false;}"
+							value="#{uploadedFile.id}">
+							<f:ajax render="@form" />
+						</h:commandButton>
+					</h:column>
+					<h:column>
+						<f:facet name="header">
+							<h:outputText rendered="#{totalFiles > 0}" value="#{i18n['file-name']}" />
+						</f:facet>
+						<h:outputText value="#{uploadedFile.name}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">
+							<h:outputText rendered="#{totalFiles > 0}" value="#{i18n['size']}" />
+						</f:facet>
+						<h:outputText value="#{uploadedFile.size}" />
+					</h:column>
+				</h:dataTable>
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
