--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/renderurl/general/renderURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/renderurl/general/renderURL.xhtml
@@ -1,16 +1,16 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui-nongen="http://liferay.com/faces/aui-nongen"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:portlet="http://java.sun.com/portlet_2_0"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-1col.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:portlet="http://java.sun.com/portlet_2_0" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<aui-nongen:field label="#{i18n['example']}">
+		<showcase:example>
 			<portlet:renderURL var="renderURL">
 				<portlet:param name="foo" value="bar" />
 			</portlet:renderURL>
 			<h:outputLink value="#{renderURL}">
 				<h:outputText value="#{i18n['hyperlink-targeting-the-showcase-portlet']}" />
 			</h:outputLink>
-		</aui-nongen:field>
+		</showcase:example>
 	</ui:define>
 
 </ui:composition>
