--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/resourceurl/general/resourceURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portlet/resourceurl/general/resourceURL.xhtml
@@ -1,15 +1,15 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui-nongen="http://liferay.com/faces/aui-nongen"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:portlet="http://java.sun.com/portlet_2_0"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-1col.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:portlet="http://java.sun.com/portlet_2_0" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
-		<aui-nongen:field label="#{i18n['example']}">
+		<showcase:example>
 			<portlet:resourceURL var="resourceURL">
 				<portlet:param name="javax.faces.resource" value="liferay-faces-logo.png" />
 				<portlet:param name="ln" value="images" />
 			</portlet:resourceURL>
 			<img src="#{resourceURL}" />
-		</aui-nongen:field>
+		</showcase:example>
 	</ui:define>
 
 </ui:composition>
