--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/icon/general/icon.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/icon/general/icon.xhtml
@@ -1,19 +1,25 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase">
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-3col.xhtml">
 
-	<aui-nongen:field label="#{i18n['component']}">
+	<ui:define name="col1">
 		<h:form>
-			<showcase:componentRenderedCheckbox />
-			<aui:icon rendered="#{showcaseModelBean.selectedComponent.rendered}" name="star" />
+			<showcase:example renderedCheckbox="true">
+				<h:selectOneMenu value="#{iconModelBean.iconName}">
+					<f:selectItem itemValue="star" />
+					<f:selectItem itemValue="zoom-out" />
+					<f:selectItem itemValue="print" />
+					<f:selectItem itemValue="shopping-cart" />
+					<f:selectItem itemValue="folder-open" />
+					<f:selectItem itemValue="resize-small" />
+					<f:selectItem itemValue="plus" />
+					<f:selectItem itemValue="music" />
+					<f:ajax render="icon" />
+				</h:selectOneMenu>
+				<aui:icon id="icon" rendered="#{showcaseModelBean.selectedComponent.rendered}" name="#{iconModelBean.iconName}" />
+			</showcase:example>
 		</h:form>
-		<aui:icon name="zoom-out" />
-		<aui:icon name="print" />
-		<aui:icon name="shopping-cart" />
-		<aui:icon name="folder-open" />
-		<aui:icon name="resize-small" />
-		<aui:icon name="plus" />
-		<aui:icon name="music" />
-	</aui-nongen:field>
+	</ui:define>
 
 </ui:composition>
