--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/inputtextarea/general/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/inputtextarea/general/inputTextarea.xhtml
@@ -1,26 +1,24 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-3col.xhtml">
 
-	<h:form>
-		<aui-nongen:field id="componentField" label="#{i18n['component']}">
-			<showcase:componentRenderedCheckbox />
-			<showcase:componentRequiredCheckbox />
-			<br />
-			<aui:inputTextarea id="textarea" rendered="#{showcaseModelBean.selectedComponent.rendered}"
-				required="#{showcaseModelBean.selectedComponent.required}" requiredMessage="#{i18n['required-message']}"
-				value="#{inputTextModelBean.text}" />
-			<h:message for="textarea" />
-		</aui-nongen:field>
-		<aui:commandButton action="#{inputTextBackingBean.submit}" value="#{i18n['submit']}">
-			<f:ajax execute="@form" render="@form" />
-		</aui:commandButton>
-		<aui-nongen:field id="modelValue" label="#{i18n['model-value']}">
+	<ui:define name="col1">
+		<h:form>
+			<showcase:example renderedCheckbox="true" requiredCheckbox="true">
+				<aui:inputTextarea id="textarea" rendered="#{showcaseModelBean.selectedComponent.rendered}"
+					required="#{showcaseModelBean.selectedComponent.required}" requiredMessage="#{i18n['required-message']}"
+					value="#{inputTextModelBean.text}" />
+				<h:message for="textarea" />
+				<hr />
+				<aui:commandButton action="#{inputTextBackingBean.submit}" value="#{i18n['submit']}">
+					<f:ajax execute="@form" render="@form" />
+				</aui:commandButton>
+			</showcase:example>
 			<showcase:outputModel>
-				<h:outputText value="#{inputTextModelBean.text}" />
+				<h:outputText id="modelValue" value="#{inputTextModelBean.text}" />
 			</showcase:outputModel>
-		</aui-nongen:field>
-	</h:form>
+		</h:form>
+	</ui:define>
 
 </ui:composition>
