--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/inputtextarea/right-to-left/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/inputtextarea/right-to-left/inputTextarea.xhtml
@@ -1,12 +1,15 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-3col.xhtml">
 
-	<h:form>
-		<aui-nongen:field id="componentField" label="#{i18n['component']}">
-			<aui:inputTextarea id="textarea" dir="RTL" lang="he" value="בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת הָאָֽרֶץ" />
-		</aui-nongen:field>
-	</h:form>
+	<ui:define name="col1">
+		<h:form>
+			<showcase:example>
+				<aui:inputTextarea id="textarea" dir="RTL" lang="he"
+					value="בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת הָאָֽרֶץ" />
+			</showcase:example>
+		</h:form>
+	</ui:define>
 
 </ui:composition>
