--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/starrating/general/starRating.xhtml
@@ -1,18 +1,13 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example#1: String value (no converter required) -->
+		<!-- Example 1: String value (no converter required) -->
 		<h:form>
-			<aui-nongen:field label="#{i18n['example-1']}">
-				<h:outputText value="#{i18n['aui-starrating-general-example-1']}" />
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['component']}">
-				<showcase:componentRenderedCheckbox />
-				<showcase:componentRequiredCheckbox />
-				<br />
+			<showcase:example description="#{i18n['aui-starrating-general-example-1']}" number="1" renderedCheckbox="true"
+				requiredCheckbox="true">
 				<aui:starRating id="starRating" label="#{i18n['favorite']}:"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					required="#{showcaseModelBean.selectedComponent.required}" value="#{starRatingModelBean.favorite}">
@@ -23,30 +18,23 @@
 					<f:selectItem itemLabel="Open Source" itemValue="Open Source" />
 				</aui:starRating>
 				<h:message for="starRating" />
-			</aui-nongen:field>
-			<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
-				<f:ajax execute="@form" render="@form" />
-			</h:commandButton>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{starRatingModelBean.favorite}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+				<hr />
+				<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
+					<f:ajax execute="@form" render="@form" />
+				</h:commandButton>
+			</showcase:example>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{starRatingModelBean.favorite}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example#2: Object value (requires a converter) -->
+		<!-- Example 2: Object value (requires a converter) -->
 		<h:form>
-			<aui-nongen:field label="#{i18n['example-2']}">
-				<h:outputText value="#{i18n['aui-starrating-general-example-2']}" />
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['component']}">
-				<showcase:componentRenderedCheckbox />
-				<br />
+			<showcase:example description="#{i18n['aui-starrating-general-example-2']}" number="2" renderedCheckbox="true">
 				<aui:starRating id="starRating" label="#{i18n['favorite']}:"
-					rendered="#{showcaseModelBean.selectedComponent.rendered}"
-					value="#{starRatingModelBean.favoriteId}">
+					rendered="#{showcaseModelBean.selectedComponent.rendered}" value="#{starRatingModelBean.favoriteId}">
 					<f:converter converterId="javax.faces.Long" />
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
@@ -55,15 +43,14 @@
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</aui:starRating>
 				<h:message for="starRating" />
-			</aui-nongen:field>
-			<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
-				<f:ajax execute="@form" render="@form" />
-			</h:commandButton>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{starRatingModelBean.favoriteId}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+				<hr />
+				<h:commandButton action="#{starRatingBackingBean.submit}" value="#{i18n['submit']}">
+					<f:ajax execute="@form" render="@form" />
+				</h:commandButton>
+			</showcase:example>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{starRatingModelBean.favoriteId}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 
