--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/tabview/data-model/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/tabview/data-model/tabView.xhtml
@@ -1,12 +1,15 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<aui:tabView value="#{tabViewModelBean.liferayBenefits}" var="liferayBenefit">
-		<aui:tab label="#{liferayBenefit.label}">
-			<h:graphicImage name="#{liferayBenefit.imageName}" library="images" />
-			<h4>#{liferayBenefit.title}</h4>
-			<span>#{liferayBenefit.description}</span>
-		</aui:tab>
-	</aui:tabView>
+	<showcase:example>
+		<aui:tabView value="#{tabViewModelBean.liferayBenefits}" var="liferayBenefit">
+			<aui:tab label="#{liferayBenefit.label}">
+				<h:graphicImage name="#{liferayBenefit.imageName}" library="images" />
+				<h4>#{liferayBenefit.title}</h4>
+				<span>#{liferayBenefit.description}</span>
+			</aui:tab>
+		</aui:tabView>
+	</showcase:example>
 
 </ui:composition>
