--- a/demos/showcase/showcase-webapp/src/main/webapp/component/aui/thumbrating/instant-ajax/thumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/aui/thumbrating/instant-ajax/thumbRating.xhtml
@@ -1,22 +1,20 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui" 
-	xmlns:aui-nongen="http://liferay.com/faces/aui-nongen" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
-	xmlns:ui="http://java.sun.com/jsf/facelets" template="/templates/component-3col.xhtml">
-	
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
+	template="/templates/component-3col.xhtml">
+
 	<ui:define name="col1">
 		<h:form>
-			<aui-nongen:field label="#{i18n['component']}">
+			<showcase:example>
 				<aui:thumbRating value="#{thumbRatingModelBean.like}" label="#{i18n['like']}:">
 					<f:selectItem itemLabel="#{i18n['like']}" itemValue="true" />
 					<f:selectItem itemLabel="#{i18n['dislike']}" itemValue="false" />
 					<f:ajax render="@form" />
 				</aui:thumbRating>
-			</aui-nongen:field>
-			<aui-nongen:field label="#{i18n['model-value']}">
-				<showcase:outputModel>
-					<h:outputText value="#{thumbRatingModelBean.like}" />
-				</showcase:outputModel>
-			</aui-nongen:field>
+			</showcase:example>
+			<showcase:outputModel>
+				<h:outputText id="modelValue" value="#{thumbRatingModelBean.like}" />
+			</showcase:outputModel>
 		</h:form>
 	</ui:define>
 </ui:composition>
